parser/tests/snapshots/errors__contract_empty_body.snap
---
source: parser/tests/errors.rs
expression: err

---
error: failed to parse contract definition body
  ┌─ [test snippet]:1:1
  │
1 │ contract X:
  │ ^^^^^^^^^^^ the body of this contract definition must be indented and non-empty


